# http_service/routers/webhook_routers/router.go
@@ -57,8 +57,8 @@ func WebHookExample(c *gin.Context) {
 }
 
 type WebHookExampleRequest struct {
-	NodeName string `json:"node_name" form:"node_name" example:"MyVariable"`    // 节点名称
-	Value    interface{} `json:"value" form:"value"`                   // 节点值 any类型
+	NodeName string `json:"node_name" form:"node_name" example:"MyVariable" binding:"required"`    // 节点名称
+	Values    map[string]interface{} `json:"values" form:"values" binding:"required"`                   // 节点值 any类型
 }
 
 type WebHookExampleResponse struct {
@@ -135,7 +135,7 @@ type AddWebhookConfigRequest struct {
 	Active      *bool                 `json:"active" form:"active" example:"true"`                                            // 是否激活，不传的话默认true
 	When        *globaldata.Condition `json:"when" form:"when"`                                                               // 触发条件，为空时相当于通知所有数据变化
 	ConditionId *int64                `json:"condition_id" form:"condition_id" example:"1"`                                   // 条件id，不传的话默认新增条件
-	NeedNodeList []string `json:"need_node_list" form:"need_node_list" binding:"required" example:["node1","node2"]` // 需要的节点值列表，到时候会传参给webhook
+	NeedNodeList []string `json:"need_node_list" form:"need_node_list" binding:"required"` // 需要的节点值列表，到时候会传参给webhook
 }
 
 type AddWebhookConfigResponse struct {
